@@ -82,6 +82,9 @@ import ro.axon.dot.service.EmployeeService;
 class EmployeeApiTest {
   private final String employeeId = EmployeeTestAttributes.ID;
   private final Long requestId = 1L;
+
+  private final String createLeaveRequestContent = "{ \"startDate\": \"2023-08-15\", \"endDate\": \"2023-08-17\", \"type\": \"MEDICAL\", \"description\": \"description\"}";
+
   private final String editLeaveRequestContent = "{ \"startDate\": \"2023-08-25\", \"endDate\": \"2023-08-28\", \"type\": \"VACATION\", \"description\": \"Vacation leave request\", \"v\": 1 }";
   public static final TeamDetailsListItem teamDetails1 = new TeamDetailsListItem();
   public static final TeamDetailsListItem teamDetails2 = new TeamDetailsListItem();
@@ -191,7 +194,7 @@ class EmployeeApiTest {
 
     EmployeeDetailsList employeesList = new EmployeeDetailsList();
 
-    employeesList.setItems(Arrays.asList(employee));
+    employeesList.setItems(List.of(employee));
 
     when(employeeService.getEmployeesDetails(anyString())).thenReturn(employeesList);
 
@@ -217,49 +220,43 @@ class EmployeeApiTest {
 
 
   @Test
-  void answerLeaveRequestEmployeeNotFound() throws Exception {
+  void handleLeaveRequestEmployeeNotFound() throws Exception {
     doThrow(new BusinessException(
         BusinessException.BusinessExceptionElement
-            .builder()
-            .errorDescription(BusinessErrorCode.EMPLOYEE_NOT_FOUND)
-            .build()))
-        .when(employeeService).updateLeaveRequestStatus(anyString(), anyLong(), any());
+            .builder().errorDescription(BusinessErrorCode.EMPLOYEE_NOT_FOUND).build()))
+            .when(employeeService).updateLeaveRequestStatus(anyString(), anyLong(), any());
 
     mockMvc.perform(patch("/api/v1/employees/1/requests/1")
                       .contentType(MediaType.APPLICATION_JSON)
                       .accept(MediaType.APPLICATION_JSON)
                       .content(getJsonAnswer()))
-              .andExpect(status().isNotFound())
+              .andExpect(status().isBadRequest())
               .andExpect(jsonPath("$.message").value(BusinessErrorCode.EMPLOYEE_NOT_FOUND.getDevMsg()))
               .andExpect(jsonPath("$.errorCode").value(BusinessErrorCode.EMPLOYEE_NOT_FOUND.getErrorCode()));
   }
 
   @Test
-  void answerLeaveRequestRequestNotFound() throws Exception {
-      doThrow(new BusinessException(
-              BusinessException.BusinessExceptionElement
-                      .builder()
-                      .errorDescription(BusinessErrorCode.LEAVE_REQUEST_NOT_FOUND)
-                      .build()))
-              .when(employeeService).updateLeaveRequestStatus(anyString(), anyLong(), any());
+  void handleLeaveRequestRequestNotFound() throws Exception {
+    doThrow(new BusinessException(
+        BusinessException.BusinessExceptionElement
+            .builder().errorDescription(BusinessErrorCode.LEAVE_REQUEST_NOT_FOUND).build()))
+            .when(employeeService).updateLeaveRequestStatus(anyString(), anyLong(), any());
 
       mockMvc.perform(patch("/api/v1/employees/1/requests/1")
                       .contentType(MediaType.APPLICATION_JSON)
                       .accept(MediaType.APPLICATION_JSON)
                       .content(getJsonAnswer()))
-              .andExpect(status().isNotFound())
+              .andExpect(status().isBadRequest())
               .andExpect(jsonPath("$.message").value(BusinessErrorCode.LEAVE_REQUEST_NOT_FOUND.getDevMsg()))
               .andExpect(jsonPath("$.errorCode").value(BusinessErrorCode.LEAVE_REQUEST_NOT_FOUND.getErrorCode()));
   }
 
   @Test
-  void answerLeaveRequestRequestResolved() throws Exception {
-      doThrow(new BusinessException(
-              BusinessException.BusinessExceptionElement
-                      .builder()
-                      .errorDescription(BusinessErrorCode.LEAVE_REQUEST_NOT_PENDING)
-                      .build()))
-              .when(employeeService).updateLeaveRequestStatus(anyString(), anyLong(), any());
+  void handleLeaveRequestRequestResolved() throws Exception {
+    doThrow(new BusinessException(
+        BusinessException.BusinessExceptionElement
+            .builder().errorDescription(BusinessErrorCode.LEAVE_REQUEST_NOT_PENDING).build()))
+            .when(employeeService).updateLeaveRequestStatus(anyString(), anyLong(), any());
 
       mockMvc.perform(patch("/api/v1/employees/1/requests/1")
                       .contentType(MediaType.APPLICATION_JSON)
@@ -271,13 +268,11 @@ class EmployeeApiTest {
   }
 
   @Test
-  void answerLeaveRequestOutdatedVersion() throws Exception {
-      doThrow(new BusinessException(
-              BusinessException.BusinessExceptionElement
-                      .builder()
-                      .errorDescription(BusinessErrorCode.LEAVE_REQUEST_VERSION_CONFLICT)
-                      .build()))
-              .when(employeeService).updateLeaveRequestStatus(anyString(), anyLong(), any());
+  void handleLeaveRequestOutdatedVersion() throws Exception {
+    doThrow(new BusinessException(
+        BusinessException.BusinessExceptionElement
+            .builder().errorDescription(BusinessErrorCode.LEAVE_REQUEST_VERSION_CONFLICT).build()))
+            .when(employeeService).updateLeaveRequestStatus(anyString(), anyLong(), any());
 
       mockMvc.perform(patch("/api/v1/employees/1/requests/1")
                       .contentType(MediaType.APPLICATION_JSON)
@@ -310,9 +305,7 @@ class EmployeeApiTest {
 
   @Test
   void inactivateEmployeeSuccess() throws Exception {
-    String employeeId = ID;
-
-    mockMvc.perform(patch("/api/v1/employees/" + employeeId + "/inactivate"))
+    mockMvc.perform(patch("/api/v1/employees/" + ID + "/inactivate"))
         .andExpect(status().isNoContent());
   }
 
@@ -325,7 +318,7 @@ class EmployeeApiTest {
     )).when(employeeService).inactivateEmployee(employeeId);
 
     mockMvc.perform(patch("/api/v1/employees/{employeeId}/inactivate", employeeId))
-        .andExpect(status().isNotFound());
+        .andExpect(status().isBadRequest());
 
     verify(employeeService, times(1)).inactivateEmployee(employeeId);
   }
@@ -344,7 +337,7 @@ class EmployeeApiTest {
   }
 
   @Test
-  void editLeaveRequestSucces() throws Exception {
+  void editLeaveRequestSuccess() throws Exception {
 
     mockMvc.perform(
             put("/api/v1/employees/" + employeeId + "/requests/" + requestId, employeeId, requestId)
@@ -363,7 +356,7 @@ class EmployeeApiTest {
     mockMvc.perform(put("/api/v1/employees/" + employeeId + "/requests/" + requestId)
             .contentType(MediaType.APPLICATION_JSON)
             .content(editLeaveRequestContent))
-        .andExpect(status().isNotFound());
+        .andExpect(status().isBadRequest());
   }
 
   @Test
@@ -376,7 +369,7 @@ class EmployeeApiTest {
     mockMvc.perform(put("/api/v1/employees/" + employeeId + "/requests/" + requestId)
             .contentType(MediaType.APPLICATION_JSON)
             .content(editLeaveRequestContent))
-        .andExpect(status().isNotFound());
+        .andExpect(status().isBadRequest());
   }
 
   @Test
@@ -449,10 +442,98 @@ class EmployeeApiTest {
   }
 
   @Test
+  public void addLeaveRequestEmployeeNotFound() throws Exception {
+    doThrow(new BusinessException(
+            BusinessException.BusinessExceptionElement
+                    .builder()
+                    .errorDescription(BusinessErrorCode.EMPLOYEE_NOT_FOUND)
+                    .build()))
+            .when(employeeService).createLeaveRequest(anyString(), any());
+
+    mockMvc.perform(post("/api/v1/employees/1/requests")
+                    .accept(MediaType.APPLICATION_JSON)
+                    .contentType(MediaType.APPLICATION_JSON)
+                    .content(createLeaveRequestContent))
+            .andExpect(status().isBadRequest());
+
+    verify(employeeService, times(1)).createLeaveRequest(anyString(), any());
+  }
+
+  @Test
+  public void addLeaveRequestInvalidPeriod() throws Exception {
+    doThrow(new BusinessException(
+            BusinessException.BusinessExceptionElement
+                    .builder()
+                    .errorDescription(BusinessErrorCode.LEAVE_RQST_INVALID_PERIOD)
+                    .build()))
+            .when(employeeService).createLeaveRequest(anyString(), any());
+
+    mockMvc.perform(post("/api/v1/employees/1/requests")
+                    .accept(MediaType.APPLICATION_JSON)
+                    .contentType(MediaType.APPLICATION_JSON)
+                    .content(createLeaveRequestContent))
+            .andExpect(status().isBadRequest());
+
+    verify(employeeService, times(1)).createLeaveRequest(anyString(), any());
+  }
+
+  @Test
+  public void addLeaveRequestInvalidMonth() throws Exception {
+    doThrow(new BusinessException(
+            BusinessException.BusinessExceptionElement
+                    .builder()
+                    .errorDescription(BusinessErrorCode.LEAVE_RQST_INVALID_MONTH)
+                    .build()))
+            .when(employeeService).createLeaveRequest(anyString(), any());
+
+    mockMvc.perform(post("/api/v1/employees/1/requests")
+                    .accept(MediaType.APPLICATION_JSON)
+                    .contentType(MediaType.APPLICATION_JSON)
+                    .content(createLeaveRequestContent))
+            .andExpect(status().isBadRequest());
+
+    verify(employeeService, times(1)).createLeaveRequest(anyString(), any());
+  }
+
+  @Test
+  public void addLeaveRequestInvalidNumberOfDays() throws Exception {
+    doThrow(new BusinessException(
+            BusinessException.BusinessExceptionElement
+                    .builder()
+                    .errorDescription(BusinessErrorCode.LEAVE_RQST_INVALID_NUMBER_DAYS)
+                    .build()))
+            .when(employeeService).createLeaveRequest(anyString(), any());
+
+    mockMvc.perform(post("/api/v1/employees/1/requests")
+                    .accept(MediaType.APPLICATION_JSON)
+                    .contentType(MediaType.APPLICATION_JSON)
+                    .content(createLeaveRequestContent))
+            .andExpect(status().isBadRequest());
+
+    verify(employeeService, times(1)).createLeaveRequest(anyString(), any());
+  }
+
+  @Test
+  public void addLeaveRequestDifferentYears() throws Exception {
+    doThrow(new BusinessException(
+            BusinessException.BusinessExceptionElement
+                    .builder()
+                    .errorDescription(BusinessErrorCode.LEAVE_RQST_DIFF_YEARS)
+                    .build()))
+            .when(employeeService).createLeaveRequest(anyString(), any());
+
+    mockMvc.perform(post("/api/v1/employees/1/requests")
+                    .accept(MediaType.APPLICATION_JSON)
+                    .contentType(MediaType.APPLICATION_JSON)
+                    .content(createLeaveRequestContent))
+            .andExpect(status().isBadRequest());
+
+    verify(employeeService, times(1)).createLeaveRequest(anyString(), any());
+  }
+
+  @Test
   @DisplayName("When add leave request then return status code")
   void whenAddLeaveRequestThenReturnStatus() throws Exception {
-    String createLeaveRequestContent = "{ \"startDate\": \"2023-08-15\", \"endDate\": \"2023-08-17\", \"type\": \"MEDICAL\", \"description\": \"description\"}";
-
     CreateLeaveRequestDetails createLeaveRequestDetails = new CreateLeaveRequestDetails();
     createLeaveRequestDetails.setType(LeaveRequestType.MEDICAL);
     createLeaveRequestDetails.setStartDate(LocalDate.of(2023,8, 15));
@@ -481,7 +562,7 @@ class EmployeeApiTest {
 
     mockMvc.perform(get("/api/v1/employees/{employeeId}/remaining-days-off", ID)
                     .contentType(MediaType.APPLICATION_JSON))
-            .andExpect(status().isNotFound())
+            .andExpect(status().isBadRequest())
             .andExpect(jsonPath("$.errorCode").value(BusinessErrorCode.EMPLOYEE_NOT_FOUND.getErrorCode()));
   }
 
@@ -599,7 +680,7 @@ class EmployeeApiTest {
 
     mockMvc.perform(get("/api/v1/employees/1/requests")
             .contentType(MediaType.APPLICATION_JSON))
-        .andExpect(status().isNotFound())
+        .andExpect(status().isBadRequest())
         .andExpect(jsonPath("$.message").value(BusinessErrorCode.EMPLOYEE_NOT_FOUND.getDevMsg()))
         .andExpect(jsonPath("$.errorCode").value(BusinessErrorCode.EMPLOYEE_NOT_FOUND.getErrorCode()));
   }
